@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-04T16:17:05Z",
+  "timestamp" : "2024-02-05T08:18:45Z",
   "count_outdated" : 1559,
   "uniques_outdated" : 854,
-  "count" : 1590,
-  "uniques" : 870,
+  "count" : 1591,
+  "uniques" : 871,
   "clones" : [
     {
       "timestamp": "2024-01-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
